Added browser for quicksave snapshots
Added save screen to bmp feature
Added menu to download ZEsarUX extras
Added Windows icon
Added F key to toggle top cpu speed
Added F key to pause/unpause tape
Added setting to rotate output tape when selecting tape that already exists
Added setting to resample audio output to 1 bit


Improved emulation: use a slightly less cpu on every scanline
Improved compilation script: allow to set different C compiler

Improved menu:
-Allow some windows to be running on the background, all at the same time. This makes the menu environment more powerful!
-Active windows are saved and restored on startup
-Pressing the menu key (F5 by default) when menu is open, it will send you back to the main menu. Also pressing over Z logo on ext desktop
-Some window hotkeys can be pressed with mouse click (example: Debug CPU Window, File utilities, View Sprites, Hex Editor, Disassemble)
-Improved some interface fonts in sizes smaller than 8 pixel width
-Added GUI Styles: MSX, Solarized Dark & Light
-Added setting to select machine by name instead by manufacturer
-Added setting to disable showing cpu temperature, or FPS on footer
-Added keyboard help window for all machines
-Footer FPS warns in red colour when FPS low

Improved Visualmem:
-added MMC Read/Write views
-added "Defrag style" setting

Improved debugging:
-Added breakpoint action "reset-tstatp"
-Added SEG0, SEG1, ... SEG7 variables to match TBBlue MMU pages
-Added IN() function to read a port in the breakpoint parser
-Added key to execute a RET 

Improved ZRCP:
-Allow to write commands in "". Not all commands support this
-Added save-binary command, to save binary data to a file
-Added save-screen command, to save machine screen to a file

Improved Esxdos handler: 
-Added f_mkdir function 
-Added configuration setting to save local work directory

Improved TBBlue emulation:
-Added Layer2 modes 320x256 and 640x256
-Added 4bpp sprites
-Enable Timex video by default